# haar-classifier

./: README.md  pyproject.toml
src/app/: app.py
src/training/: neg.lst  pos.lst  pos_samples.vec
src/training/classifier/: cascade.xml  log.txt  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
