[tool.poetry]
name = "haar-classifier"
version = "0.1.0"
description = ""
authors = ["Rafael Luna <kenkorio23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.10"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
